<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Login">

    <ImageView
        android:id="@+id/login_nav_bk"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/arrow_bk"
        app:tint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/login_nav_bk"
        app:layout_constraintBottom_toTopOf="@id/dial_pad">
        <LinearLayout
            android:id="@+id/login_h1_div"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/login_h1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_h1"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="30sp" />
            <ImageView
                android:id="@+id/login_h1_img"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/wave_hand"
                android:layout_marginHorizontal="10dp"
                android:layout_gravity="center"
                />

        </LinearLayout>
        <TextView
            android:id="@+id/login_h2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/login_h1_div"
            android:text="@string/login_h2"
            android:textColor="@color/text_hint"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/login_input_div"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_bg"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_marginVertical="20dp"
            app:layout_constraintTop_toBottomOf="@id/login_h2"
           >

            <com.hbb20.CountryCodePicker
                android:id="@+id/login_countrycode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ccpDialog_allowSearch="false"
                app:ccpDialog_showTitle="false"
                app:ccp_customMasterCountries="US,UK,GB,CA,NG"
                app:ccp_defaultNameCode="US"
                app:ccp_showFlag="true"
                app:ccp_showNameCode="false" />
            <EditText
                android:id="@+id/login_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textSize="18sp"
                android:background="@color/text_bg"
                android:hint="@string/login_input_hint"
                android:layout_gravity="center"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/login_footer_txt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/login_input_div"
            android:text="@string/login_footer_txt1"
            android:textColor="@color/text_hint"
            android:layout_marginVertical="10dp"
        />
        <LinearLayout
            android:id="@+id/login_footer_text2_div"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/login_footer_txt1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_footer_txt2"
                android:textColor="@color/black"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_footer_txt3"
                android:layout_marginHorizontal="5dp"
                android:textColor="@color/text_hint"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_footer_txt4"
                android:textColor="@color/black"
                android:layout_marginHorizontal="5dp"
            />

        </LinearLayout>



            <LinearLayout
            android:id="@+id/login_action_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/login_footer_text2_div"
            android:background="@drawable/action_btn"
            android:padding="18sp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="40sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/next"
                android:textSize="18sp"
                android:textStyle="bold"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/dial_pad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="200dp"
        android:orientation="horizontal"
        >

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>