<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_bg"
    tools:context=".UserDetails">

    <ProgressBar
        android:id="@+id/details_prog"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:indeterminateTint="@color/accent"
        android:indeterminate="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


    <androidx.core.widget.NestedScrollView
        android:id="@+id/details_div"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/otp_div"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:visibility="invisible"
                android:id="@+id/user_img_load"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >
                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminateTint="@color/accent"
                    android:indeterminate="true"
                />
            </FrameLayout>

            <ImageView
                android:id="@+id/user_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/empty_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/user_img_from_cam"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginEnd="-20sp"
                android:layout_marginBottom="-10dp"
                android:background="@drawable/intro_img_bg"
                app:layout_constraintBottom_toBottomOf="@id/user_img"
                app:layout_constraintEnd_toEndOf="@id/user_img">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/camera"
                    app:tint="@color/white_bg" />

            </FrameLayout>

            <TextView
                android:id="@+id/user_img_from_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:text="@string/user_img_txt"
                android:textColor="@color/text_hint"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_img" />


            <TextView
                android:id="@+id/user_h1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60sp"
                android:text="@string/user_h1"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_img_from_file" />

            <LinearLayout
                android:id="@+id/user_name_input_div"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="100"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_h1">

                <EditText
                    android:id="@+id/user_fname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="50"
                    android:background="@drawable/text_bg"
                    android:hint="@string/fname"
                    android:inputType="text"
                    android:padding="18dp" />

                <EditText
                    android:id="@+id/user_lname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="50"
                    android:background="@drawable/text_bg"
                    android:hint="@string/lname"
                    android:inputType="text"
                    android:padding="18dp" />


            </LinearLayout>

            <TextView
                android:id="@+id/user_txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:text="@string/user_h1a"
                android:textColor="@color/text_hint"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_name_input_div" />

            <TextView
                android:id="@+id/user_h2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/user_h2"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_txt1" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/user_uname_div"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:background="@drawable/text_bg"
                android:padding="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_h2">

                <EditText
                    android:id="@+id/user_uname"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:background="@color/text_bg"
                    android:inputType="text"
                    android:text="@string/uname"
                    android:maxLength="15"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/user_uname_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uname_change"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textColor="@color/accent"
                    android:textSize="16sp" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/user_h3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/user_h3"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_uname_div" />

            <EditText
                android:id="@+id/user_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/text_bg"
                android:hint="@string/user_age"
                android:inputType="number"
                android:padding="18dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_h3" />

            <TextView
                android:id="@+id/user_h3a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:text="@string/user_h3a"
                android:textColor="@color/text_hint"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_age" />

            <TextView
                android:id="@+id/user_h4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/user_h4"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_h3a" />

            <EditText
                android:id="@+id/user_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/text_bg"
                android:gravity="top"
                android:hint="@string/user_bio"
                android:inputType="textMultiLine"
                android:minHeight="100dp"
                android:padding="18sp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_h4" />

            <TextView
                android:id="@+id/user_h4a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:text="@string/user_h4a"
                android:textColor="@color/text_hint"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_bio" />

            <LinearLayout
                android:id="@+id/user_action_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="40sp"
                android:background="@drawable/action_btn"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="18sp"
                app:layout_constraintTop_toBottomOf="@id/user_h4a"

                >
                <ProgressBar
                    android:id="@+id/user_action_btn_load"
                    android:visibility="gone"
                    android:layout_width="30dp"
                    android:layout_height="25dp"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/white"/>

                <TextView
                    android:id="@+id/user_action_btn_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginHorizontal="5dp"
                    android:src="@drawable/arrow_fwd_body"
                    app:tint="@color/white" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>