<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Home">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:rotation="-20"
            android:paddingVertical="100dp"
            android:id="@+id/intro_img_div"

            >
            <ImageView
                android:id="@+id/intro_img1"
                android:src="@drawable/img1"
                android:layout_width="140dp"
                android:layout_height="220dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/intro_img_long_bg"
                android:backgroundTint="#E3E3E3"
                />
            <ImageView
                android:id="@+id/intro_img2"
                android:src="@drawable/img3"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/intro_img1"
                android:background="@drawable/intro_img_bg"
                android:layout_margin="15dp"
                android:backgroundTint="#E3E3E3"
                />
            <ImageView
                android:id="@+id/intro_img3"
                android:src="@drawable/img2"
                android:layout_width="90dp"
                android:layout_height="110dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/intro_img1"
                android:background="@drawable/intro_img_long_bg"
                android:layout_margin="15dp"
                android:backgroundTint="#E3E3E3"
                />

            <ImageView
                android:id="@+id/intro_img4"
                android:src="@drawable/img4"
                android:layout_width="110dp"
                android:layout_height="160dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/intro_img2"
                android:background="@drawable/intro_img_long_bg"
                android:layout_marginStart="30dp"
                android:backgroundTint="#E3E3E3"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:id="@+id/intro_h_div"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/intro_img_div">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_h1"
                android:textSize="30sp"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_h2"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/accent"
                android:layout_marginHorizontal="5dp"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/home_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/intro_h_div"
            android:layout_marginTop="10sp"
            android:textColor="@color/text_hint"
            android:text="@string/home_txt"
            app:layout_constraintStart_toStartOf="@id/intro_h_div"

            android:textSize="14sp" />

        <TextView
            android:id="@+id/home_action_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/home_txt"
            android:layout_marginTop="30sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:text="@string/join"
            android:textStyle="bold"
            android:background="@drawable/action_btn"
            android:textSize="18sp"
            android:padding="18sp"
            app:layout_constraintStart_toStartOf="@id/intro_h_div"
            app:layout_constraintEnd_toEndOf="@id/intro_h_div"
            />

        <LinearLayout
            android:id="@+id/home_footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_action_btn"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_hint"
                android:text="@string/login_qst"
                android:textSize="14sp"
                />
            <TextView
                android:id="@+id/home_login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_margin="5sp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/accent"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>